# TripPlanner

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_accommodation.py
backend/app/: main.py
backend/app/agent/: prompt.py  runner.py  tools.py
backend/app/api/: admin.py  auth.py  deps.py  events.py  messages.py  stt.py  telegram.py  trips.py
backend/app/bot/: handlers.py  main.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py  session.py
backend/app/rag/: embedder.py  retriever.py  seed.py
backend/app/schemas/: auth.py  events.py  trips.py
backend/app/services/: geocoding.py  stt.py
backend/data/: kb_russia.jsonl
backend/tests/: conftest.py  test_admin.py  test_agent.py  test_auth.py  test_events.py  test_geocoding.py  test_health.py  test_rag.py  test_telegram_link.py  test_trips.py
docs/superpowers/plans/: 2026-04-18-travel-buddy-ru.md
docs/superpowers/specs/: 2026-04-18-travel-buddy-ru-design.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: admin.ts  auth.ts  telegram.ts  trips.ts
frontend/src/components/: AuthCard.tsx  ChatPanel.tsx  DaySelector.tsx  Itinerary.tsx  MapView.tsx  NewTripForm.tsx  ProtectedRoute.tsx  VoiceButton.tsx
frontend/src/hooks/: useVoiceInput.ts
(+21 files in other folders)
